--- a/css/mobile.css
+++ b/css/mobile.css
@@ -159,12 +159,12 @@ article img{width: 100%;}
 }
 
 .con{
-    margin: 0px auto;
+
     display: grid;
-    max-width: 414px;
+  
     padding: 0px 1%;
     box-sizing: border-box;
-    grid-template-columns: auto;
+    grid-template-columns:100%;
     grid-template-areas: 
     "item"
     "brand"
